--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       border-radius: 0.5rem;
       border: 1px solid #ccc;
     }
+    h3, h4 { margin-top: 1.5rem; }
   </style>
 </head>
 <body>
@@ -51,13 +52,23 @@
 
   <div id="catalog" class="hidden">
     <h2>¡Hola amor! 💖 Tus puntos: <span id="pointsDisplay"></span></h2>
-    <button onclick="addPoints()">+10 puntos (secreto)</button>
+    <div id="secretButtons" class="hidden">
+      <button onclick="addPoints()">+10 puntos (secreto)</button>
+    </div>
+    <h3>Premios disponibles</h3>
     <div id="rewardsContainer"></div>
+    <h4>🎁 Premios reclamados</h4>
+    <ul id="claimedList"></ul>
   </div>
 
   <script>
-    const SECRET_PASSWORD = 'amor2025';
+    const PASSWORD_USER = 'amor2025';
+    const PASSWORD_OWNER = 'soyyo2025';
+    let isOwner = false;
+
     let points = parseInt(localStorage.getItem('puntos-amor')) || 100;
+    let claimed = JSON.parse(localStorage.getItem('premios-reclamados') || '[]');
+
     const rewards = [
       { id: 1, title: 'Cena romántica', points: 50 },
       { id: 2, title: 'Día de spa', points: 80 },
@@ -66,9 +77,13 @@
 
     function checkPassword() {
       const input = document.getElementById('passwordInput').value;
-      if (input === SECRET_PASSWORD) {
+      if (input === PASSWORD_USER || input === PASSWORD_OWNER) {
+        isOwner = input === PASSWORD_OWNER;
         document.getElementById('login').classList.add('hidden');
         document.getElementById('catalog').classList.remove('hidden');
+        if (isOwner) {
+          document.getElementById('secretButtons').classList.remove('hidden');
+        }
         renderCatalog();
       } else {
         alert("Clave incorrecta 💔");
@@ -89,13 +104,18 @@
         `;
         container.appendChild(card);
       });
+
+      const claimedList = document.getElementById('claimedList');
+      claimedList.innerHTML = claimed.map(item => `<li>${item}</li>`).join('');
     }
 
     function redeem(id) {
       const reward = rewards.find(r => r.id === id);
       if (reward && points >= reward.points) {
         points -= reward.points;
+        claimed.push(reward.title);
         localStorage.setItem('puntos-amor', points);
+        localStorage.setItem('premios-reclamados', JSON.stringify(claimed));
         renderCatalog();
       }
     }
